--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -1,11 +1,13 @@
 .header {
     width: 100%;
-    background: hsla(0,0%,100%,.8);
+    background-color: hsla(0,0%,100%,.8);
     overflow: hidden;
     color: #111;
     box-shadow: inset 0 -1px 0 0 rgba(0,0,0,.1);
-    position: sticky;
+    position: fixed;
     top: 0;
+    z-index: 111;
+    backdrop-filter: blur(5px);
 }
 
 .headerContainer {
@@ -63,8 +65,8 @@
 }
 
 .headerIcon {
-    margin: 0 0 0 10px;
-    font-size: 14px;
+    margin: 0 0 0 6px;
+    font-size: 10px;
     color: #666;
 }
 
@@ -95,6 +97,11 @@
     font-weight: 400;
     font-size: 13px;
     color: #666;
+    transition: all 0.2s linear;
+}
+
+.headerBth:hover {
+    color: #111;
 }
 
 .headerBthActive {
@@ -103,7 +110,17 @@
     font-size: 13px;
     margin: 0 0 0 26px;
     border-radius: 6px;
-    padding: 8px 16px;
+    padding: 7px 16px;
     color: #fff;
     background: #111;
+    transition-property: background,color;
+    transition-duration: .15s;
+    transition-timing-function: ease;
+    border: 1px solid transparent;
+}
+
+.headerBthActive:hover {
+    border-color: #111;
+    color: #111;
+    background: #fff;
 }
