--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -4,7 +4,7 @@
     overflow: hidden;
     color: #111;
     box-shadow: inset 0 -1px 0 0 rgba(0,0,0,.1);
-    position: fixed;
+    position: sticky;
     top: 0;
     z-index: 111;
     backdrop-filter: blur(5px);
