--- a/src/styles/form.module.css
+++ b/src/styles/form.module.css
@@ -1,19 +1,89 @@
 .formBlock {
-    padding: 80px 0 0 0;
+    padding: 80px 0;
     background: linear-gradient(180deg,#fff 0,#fafafa 50%,#fafafa 100%);
     width: 100%;
-    min-height: 60vh;
 }
 
 .form {
     margin: 0 auto;
-    max-width: 1370px;
+    max-width: 550px;
+    border: 1px solid #eaeaea;
+    padding: 32px;
+    border-radius: 8px;
+    background: #fff;
+    box-shadow: 0 30px 60px rgba(0,0,0,.12);
 }
 
 .formH1 {
-    font-size: 30px;
+    font-size: 29px;
     color: #000;
-    margin: 0 0 30px 0;
+    margin: 0 0 36px 0;
     padding: 0;
-    text-align: center;
+    text-align: left;
+}
+
+.formButton {
+    background: #111;
+    border: 1px solid transparent;
+    color: #fff;
+    border-radius: 6px;
+    width: 100%;
+    transition-property: background,color;
+    transition-duration: .15s;
+    transition-timing-function: ease;
+    font-weight: 400;
+    height: 40px;
+    font-size: 14px;
+    font-family: var(--font-mono);
+    cursor: pointer;
+}
+
+.formButton:hover {
+    border-color: #111;
+    color: #111;
+    background: transparent;
+}
+
+.formInput {
+    font-family: var(--font-mono);
+    width: 100%;
+    outline: none;
+    transition: border-color .15s ease;
+    -webkit-tap-highlight-color: transparent;
+    height: 40px;
+    border: 1px solid #eaeaea;
+    border-radius: 6px;
+    font-weight: 400;
+    background: transparent;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    padding: 0 12px;
+    color: #000;
+}
+
+.formInput:focus,
+.formInput:active {
+    border-color: #111;
+}
+
+.formLabel {
+    margin-bottom: 20px;
+}
+
+.formLabelText {
+    font-weight: 500;
+    color: #666;
+    font-size: 13px;
+    margin-bottom: 8px;
+    display: block;
+}
+
+.formP {
+    color: #888;
+    font-size: 13px;
+    font-weight: 500;
+    margin: 0 0 20px 0;
+    padding: 0;
+    line-height: 23px;
 }
